syntax = "proto3";

package models.v1;

message EmailConfirmation {
  string email = 1;
  string salt = 2;
}
